python-hello-v1-v2/pyhton-gw.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: python-gw
  namespace: python-mesh
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "python-mesh.apps.xxx.xxx.xxx.xxx.xxx.com"
